k8s-services/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-server
spec:
  selector:
    app: gateway-server
  ports:
    - port: 80
      targetPort: 8080
